log
Wed 20 Mar 2024 07:36:54 PM UTC: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘cadena_balanceada’:
exercises.c:90:21: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
   90 |       Stack* pila = createStack();
      |                     ^~~~~~~~~~~
      |                     create_stack
exercises.c:90:21: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
At top level:
exercises.c:89:7: error: ‘cadena_balanceada’ defined but not used [-Werror=unused-function]
   89 |   int cadena_balanceada(char* cadena) {
      |       ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
61258bb
Wed 20 Mar 2024 07:37:55 PM UTC: 
 exercises.c | 27 +--------------------------
 1 file changed, 1 insertion(+), 26 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:89:11: error: expected ‘;’ before ‘:’ token
   89 |   return 0:
      |           ^
      |           ;
Compilation failed
961e8e0
Wed 20 Mar 2024 07:38:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
537dcdc
Wed 20 Mar 2024 07:52:01 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
8c1c2bc
Wed 20 Mar 2024 07:54:19 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: ‘data’ undeclared (first use in this function)
   51 |   free(data);
      |        ^~~~
exercises.c:51:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dd3edd0
Wed 20 Mar 2024 07:55:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: ‘data’ undeclared (first use in this function)
   51 |   free(*data);
      |         ^~~~
exercises.c:51:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ea4e545
Wed 20 Mar 2024 07:56:37 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
f1e9aaa
Wed 20 Mar 2024 08:03:23 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cfa750a
Wed 20 Mar 2024 08:14:30 PM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:100:6: error: unknown type name ‘stack’; did you mean ‘Stack’?
  100 |      stack* P3 = create_stack();
      |      ^~~~~
      |      Stack
exercises.c:100:18: error: initialization of ‘int *’ from incompatible pointer type ‘Stack *’ {aka ‘List *’} [-Werror=incompatible-pointer-types]
  100 |      stack* P3 = create_stack();
      |                  ^~~~~~~~~~~~
exercises.c:103:15: error: passing argument 1 of ‘push’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  103 |          push(P3, data);
      |               ^~
      |               |
      |               int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |           ~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:107:17: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  107 |      data = pop(P3);
      |                 ^~
      |                 |
      |                 int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:17:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:110:21: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  110 |          data = pop(P3);
      |                     ^~
      |                     |
      |                     int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:17:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
7fc25ab
Wed 20 Mar 2024 08:14:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:100:6: error: unknown type name ‘stack’; did you mean ‘Stack’?
  100 |      stack* P3 = create_stack();
      |      ^~~~~
      |      Stack
exercises.c:100:18: error: initialization of ‘int *’ from incompatible pointer type ‘Stack *’ {aka ‘List *’} [-Werror=incompatible-pointer-types]
  100 |      stack* P3 = create_stack();
      |                  ^~~~~~~~~~~~
exercises.c:103:15: error: passing argument 1 of ‘push’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  103 |          push(P3, data);
      |               ^~
      |               |
      |               int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |           ~~~~~~~^~~~~
In file included from test.c:5:
exercises.c:107:17: error: ‘stack’ undeclared (first use in this function); did you mean ‘Stack’?
  107 |      data = pop(stack* P3);
      |                 ^~~~~
      |                 Stack
exercises.c:107:17: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:110:21: error: passing argument 1 of ‘pop’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  110 |          data = pop(P3);
      |                     ^~
      |                     |
      |                     int *
In file included from exercises.c:7,
                 from test.c:5:
stack.h:17:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int *’
   17 | void *pop(Stack *stack) { return popFront(stack); }
      |           ~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
22b6748
Wed 20 Mar 2024 08:16:59 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
31865aa
Wed 20 Mar 2024 08:21:19 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
e790a7b
Wed 20 Mar 2024 08:26:36 PM UTC: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|1
total_score: 50/70
882cd20
Wed 20 Mar 2024 08:26:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
1c7ec0b
Wed 20 Mar 2024 08:27:46 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
a787181
Wed 20 Mar 2024 08:31:07 PM UTC: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 60/70
0512466
Wed 20 Mar 2024 08:32:36 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
4c232f4
Wed 20 Mar 2024 08:40:58 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 60/70
8898940
Wed 20 Mar 2024 08:43:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 60/70
32add09
Wed 20 Mar 2024 08:54:03 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 60/70
3f9ec47
Wed 20 Mar 2024 08:57:45 PM UTC: 
 exercises.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:27: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  129 |             push(P, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:133:28: error: comparison between pointer and zero character constant [-Werror=pointer-compare]
  133 |                 if (pop(P) == '\0'){
      |                            ^~
exercises.c:133:21: note: did you mean to dereference the pointer?
  133 |                 if (pop(P) == '\0'){
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
a492b1b
